<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkatema1"
    tools:context=".MainActivity5">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/oyuncu_sayisi5"
        android:textColor="#E4D2D2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tek5"
        android:textColor="#E4D2D2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:text="@string/ft5"
        android:textColor="#E4D2D2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/seviye5"
        android:textColor="#E4D2D2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2_2x"
        android:textColor="#E4D2D2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_4_4x"
        android:textColor="#E4D2D2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/_6_6x"
        android:textColor="#E4D2D2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/devam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devam4"
        android:textColor="#00695C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        app:layout_constraintVertical_bias="0.838" />
</androidx.constraintlayout.widget.ConstraintLayout>