<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkatema1"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_masterx"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button14"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button16"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button17"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button18"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button19"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button20"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button21"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button22"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button18"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button23"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button19"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button24"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button25"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button26"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button27"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button23"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button28"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewsure2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="100dp"
        android:text="@string/textviewz"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28"
        app:layout_constraintVertical_bias="0.47" />

    <Button
        android:id="@+id/basla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/basla2"
        app:layout_constraintEnd_toStartOf="@+id/textViewsure2"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <TextView
        android:id="@+id/puan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="56dp"
        android:text="@string/textviewy"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/puan2"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basla2"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/musicicon"
        android:contentDescription="@string/todox" />

</androidx.constraintlayout.widget.ConstraintLayout>