<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkatema1"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/memory_master4"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button33"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button34"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button35"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button36"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button37"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button37"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button38"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button38"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button39"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button33"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button40"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button41"
        app:layout_constraintStart_toEndOf="@+id/button39"
        app:layout_constraintTop_toBottomOf="@+id/button34"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button41"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button42"
        app:layout_constraintTop_toBottomOf="@+id/button35"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button42"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button43"
        app:layout_constraintTop_toBottomOf="@+id/button36"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button43"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button44"
        app:layout_constraintTop_toBottomOf="@+id/button37"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button44"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button38"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button45"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button39"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button46"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button47"
        app:layout_constraintStart_toEndOf="@+id/button45"
        app:layout_constraintTop_toBottomOf="@+id/button40"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button47"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button41"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button48"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button49"
        app:layout_constraintTop_toBottomOf="@+id/button42"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button49"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button50"
        app:layout_constraintTop_toBottomOf="@+id/button43"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button50"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button44"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button51"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button45"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button52"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button53"
        app:layout_constraintStart_toEndOf="@+id/button51"
        app:layout_constraintTop_toBottomOf="@+id/button46"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button53"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button54"
        app:layout_constraintTop_toBottomOf="@+id/button47"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button54"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button49"
        app:layout_constraintTop_toBottomOf="@+id/button48"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button55"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button56"
        app:layout_constraintTop_toBottomOf="@+id/button49"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button56"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button50"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button57"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button51"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button58"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button59"
        app:layout_constraintStart_toEndOf="@+id/button57"
        app:layout_constraintTop_toBottomOf="@+id/button52"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button59"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button60"
        app:layout_constraintTop_toBottomOf="@+id/button53"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button60"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button61"
        app:layout_constraintTop_toBottomOf="@+id/button54"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button61"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button62"
        app:layout_constraintTop_toBottomOf="@+id/button55"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button62"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button56"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button63"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button57"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button64"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button65"
        app:layout_constraintStart_toEndOf="@+id/button63"
        app:layout_constraintTop_toBottomOf="@+id/button58"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button65"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button66"
        app:layout_constraintTop_toBottomOf="@+id/button59"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button66"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button67"
        app:layout_constraintTop_toBottomOf="@+id/button60"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button67"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toStartOf="@+id/button68"
        app:layout_constraintTop_toBottomOf="@+id/button61"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button68"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arkayuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button62"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewsure2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="132dp"
        android:text="@string/textview4"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/puan4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button68" />

    <TextView
        android:id="@+id/puan4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textview42"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/basla4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/basla4"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toStartOf="@+id/textViewsure2"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button68"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/puan4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/musicicon"
        android:contentDescription="@string/todoxyz" />
</androidx.constraintlayout.widget.ConstraintLayout>